# plasma-wallpaper-immich

./: .gitignore  CMakeLists.txt  README.md  immichbackend.cpp  immichbackend.h  install.sh  kpac  package-plasmoid.sh  release-please-config.json
cmake/: PlasmaInstallPackage.cmake
package/: metadata.json
package/contents/config/: main.xml
package/contents/ui/: config.qml  main.qml
